// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground > app/app.vue > auto imports > definition 1`] = `
[
  {
    "fileName": "app/utils/index.ts",
    "textSpan": {
      "length": 3,
      "start": 63,
    },
  },
]
`;

exports[`playground > app/app.vue > import glob > definition 1`] = `
[
  {
    "fileName": "app/assets/maestrale.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "app/assets/libeccio.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > import glob > definition 2`] = `
[
  {
    "fileName": "app/assets/maestrale.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "app/assets/libeccio.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > nitro routes > definition 1`] = `
[
  {
    "fileName": "server/routes/sitemap.post.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "server/routes/sitemap.get.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > nitro routes > definition 2`] = `
[
  {
    "fileName": "public/fallback.json",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > nitro routes > definition 3`] = `
[
  {
    "fileName": "server/api/foo.get.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > nitro routes > definition 4`] = `
[
  {
    "fileName": "server/api/foo.post.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > page meta > definition 1`] = `
[
  {
    "fileName": "app/layouts/center.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > page meta > definition 2`] = `
[
  {
    "fileName": "app/middleware/auth.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > runtime config > definition 1`] = `
[
  {
    "fileName": "layers/archer/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 82,
    },
  },
  {
    "fileName": "layers/berserker/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 82,
    },
  },
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 43,
    },
  },
]
`;

exports[`playground > app/app.vue > runtime config > definition 2`] = `
[
  {
    "fileName": "layers/berserker/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 102,
    },
  },
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 59,
    },
  },
]
`;

exports[`playground > app/app.vue > runtime config > definition 3`] = `
[
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 75,
    },
  },
]
`;

exports[`playground > app/app.vue > runtime config > definition 4`] = `
[
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 5,
      "start": 112,
    },
  },
]
`;

exports[`playground > app/app.vue > typed pages > definition 1`] = `
[
  {
    "fileName": "app/pages/about.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > typed pages > definition 2`] = `
[
  {
    "fileName": "app/pages/about/contact.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > typed pages > definition 3`] = `
[
  {
    "fileName": "app/pages/about.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/components/foo-bar.vue > unimport > references 1`] = `
[
  {
    "fileName": "app/components/foo-bar.vue",
    "textSpan": {
      "length": 6,
      "start": 38,
    },
  },
  {
    "fileName": "app/components/foo-bar.vue",
    "textSpan": {
      "length": 6,
      "start": 77,
    },
  },
  {
    "fileName": "app/app.vue",
    "textSpan": {
      "length": 6,
      "start": 1814,
    },
  },
  {
    "fileName": "app/app.vue",
    "textSpan": {
      "length": 12,
      "start": 1829,
    },
  },
]
`;

exports[`playground > app/fixtures/signature.ts > vanilla signature > definition 1`] = `
[
  {
    "fileName": "app/fixtures/signature.ts",
    "textSpan": {
      "length": 11,
      "start": 124,
    },
  },
]
`;

exports[`playground > app/fixtures/signature.ts > vanilla signature > definition 2`] = `
[
  {
    "fileName": "app/fixtures/signature.ts",
    "textSpan": {
      "length": 11,
      "start": 124,
    },
  },
]
`;

exports[`playground > app/utils/index.ts > auto imports > references 1`] = `
[
  {
    "fileName": "app/app.vue",
    "textSpan": {
      "length": 3,
      "start": 755,
    },
  },
]
`;
